<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".deleteActividad">

    <TextView
        android:id="@+id/tvDatos"
        android:layout_width="79dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/datos"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tilPesoUpdate" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="32dp"
        android:text="@string/imc2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/tilPesoUpdate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFechaUpdate"
        android:layout_width="199dp"
        android:layout_height="77dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="169dp"
            android:layout_height="44dp"
            android:hint="@string/fechaCrud"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="316dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPesoUpdate"
        android:layout_width="199dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/tilFechaUpdate">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="161dp"
            android:layout_height="47dp"
            android:hint="@string/pesoCrud"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botones"
        android:text="@string/actualizar_registro"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:background="@drawable/botones"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminar"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:background="@drawable/botones"
        android:text="@string/eliminar_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="387dp" />

</androidx.constraintlayout.widget.ConstraintLayout>